# TAC_IDE

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  main.cpp  myfile  myfile2
DotWriter/: DotWriter.cpp  DotWriter.h
_Examples/: edu_test.txt  graph_in_text.dot
_Examples/LLVM/: program_copy.ll
_Examples/Toy/: FactorialProgram.txt  available_expressions.txt  available_expressions2.txt  available_expressions3.txt  constant_folding.txt  copy_propagation.txt  copy_propagation2.txt  critical_edges.txt  myfile  new_sccp_test.txt  reach_def_test.txt  sccp2.txt  ssa_test.txt  value_numbering.txt
_Examples/Toy/Examples/: ChoiceSort.txt  Compare.txt  Factorial.txt  SortBuble.txt  TempIdents.txt
_TestCode/: anticipable_expressions.txt  anticipate_expression.txt  copy_propagation.txt  copy_propagation2.txt  graph_in_text.dot  lazy_code_motion.txt  myfile2  new_sccp_test.txt  reach_def_test.txt  ref_test.txt  sccp_test.txt  ssa_swap_problem.txt  ssa_test.txt  strength_reduction.txt
_Tutorial/: start.html
_Tutorial/ConstantFolding/: text.html
_Tutorial/CopyPropagation/: text.html
_Tutorial/DFSTree/: text.html
_Tutorial/Dominators/: text.html
_Tutorial/FromSSA/: from_ssa.html  text.html
_Tutorial/GVN/: text.html
_Tutorial/LCM/: text.html
_Tutorial/LivenessAnalysis/: text.html
_Tutorial/OSR/: text.html
_Tutorial/ReachingDefinition/: text.html
_Tutorial/SCCP/: text.html
_Tutorial/SSCP/: text.html
_Tutorial/ToSSA/: text.html
_Tutorial/UCE/: text.html  useless_code_elimination.html
_Tutorial/UseDefGraph/: text.html
_bin/: LeftOver.h
cmake/: FindGraphviz.cmake
diagrams/: analyses_and_optimization.puml  gui.puml  program_structure.puml  whole_program.puml
driver/: driver.cpp  driver.hpp
grammar/: lexer.l  parser.y
graph_writer/: graph_writer.cpp  graph_writer.h
output/: CMakeCache.txt  Makefile  cmake_install.cmake
output/src/tac_simulator/: Makefile  cmake_install.cmake
output/src/tac_simulator/flex_bison/: language.output  language.tab.cpp  language.tab.hpp  lex.yy.cpp
output/src/toy_optimizer/: Makefile
parse_driver/: driver.hpp
parser/: lexer.cpp  location.hh  parser.cpp  parser.hpp
parser/driver/: driver.cpp  driver.hpp
parser/grammar/: lexer.l  parser.y
src/_garbage_bin/: LeftOver.h  loop_finder.cpp
src/fmt/: README.rst
src/fmt/support/: C++.sublime-syntax  compute-powers.py  docopt.py  manage.py
src/graph_writer/: graph_writer.cpp  graph_writer.hpp
src/gui_code_editor/: the_app.cpp  the_app.h
src/gui_code_editor/generated_gui_classes/: my_generated_gui.cpp  my_generated_gui.h  myproject.fbp
src/gui_code_editor/utilities/: image_loading.cpp  image_loading.hpp
src/gui_code_editor/windows/function_selection_window/: function_chooser.cpp  function_chooser.h
src/gui_code_editor/windows/image_viewer/: convert_dot_to_image.cpp  convert_dot_to_image.hpp  graph_view.cpp  graph_view.h  image_panel.cpp  image_panel.hpp
src/gui_code_editor/windows/main_window/: code_editor_control.cpp  code_editor_control.h  main_window.cpp  main_window.h  scintilla_definitions.cpp  scintilla_definitions.h
src/llvm_simulator/: llvm_simulator.cpp  llvm_simulator.hpp
src/parser/compiled_parser/: lexer.cpp  location.hh  parser.cpp  parser.hpp
src/parser/driver/: driver.cpp  driver.hpp
src/parser/grammar/: lexer.l  parser.y
src/tac_simulator/: CMakeLists.txt  Makefile  interpreter.cpp  interpreter.h  label_table.cpp  label_table.h  language.yy  lexer.ll  main.cpp  semantic_analysis.cpp  semantic_analysis.h  symbol_table.cpp  symbol_table.h  tac_project.cpp  tac_project.h  tac_tree.cpp  tac_tree.h
src/tac_worker/: optimization_runner.cpp  optimization_runner.hpp  print_utility.cpp  print_utility.hpp  quad_preparation.cpp  quad_preparation.hpp
src/tac_worker/data_flow_analyses/: data_flow_analyses.hpp  data_flow_framework.hpp  print_graph.cpp  print_graph.hpp  set_utilities.hpp  use_def_graph.cpp  use_def_graph.hpp
src/tac_worker/data_flow_analyses/expressions_analyses/: earliest_expressions.hpp  utilities.cpp
src/tac_worker/optimizations/: constant_propagation.cpp  constant_propagation.hpp  copy_propagation.cpp  copy_propagation.hpp  data_flow_analyses.cpp  data_flow_analyses.hpp  lazy_code_motion.cpp  lazy_code_motion.hpp  live_variable_analyses.cpp  live_variable_analyses.hpp  operator_strength_reduction.cpp  operator_strength_reduction.hpp  sparse_conditional_constant_propagation.cpp  sparse_conditional_constant_propagation.hpp  sparse_simple_constant_propagation.cpp  sparse_simple_constant_propagation.hpp  ssa.cpp  ssa.hpp  useless_code_elimination.cpp  useless_code_elimination.hpp  value_numbering.cpp  value_numbering.hpp
src/tac_worker/optimizations/data_flow_analyses/: anticipable_expressions.cpp  anticipable_expressions.hpp  available_expressions.cpp  available_expressions.hpp  data_flow_analyses.cpp  data_flow_analyses.hpp  data_flow_framework.cpp  data_flow_framework.hpp  dominators.cpp  dominators.hpp  print_graph.cpp  print_graph.hpp  set_utilities.hpp  ssa_graph.cpp  ssa_graph.hpp  use_def_graph.cpp  use_def_graph.hpp  utilities.hpp
src/tac_worker/structure/: basic_block.cpp  basic_block.hpp  function.cpp  function.hpp  program.hpp
src/tac_worker/structure/quadruple/: destination.hpp  operand.hpp  quadruple.hpp
src/tac_worker/utilities/: new_name_generator.hpp  optimization_runner.cpp  optimization_runner.hpp  quad_preparation.cpp  quad_preparation.hpp
src/toy_optimizer/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/toy_optimizer/_TestCode/: FactorialProgram.txt  anticipable_expressions2.txt  copy_propagation2.txt  graph_in_text.dot  lazy_code_motion.txt  ssa_swap_problem.txt
src/toy_optimizer/cmake_plugins/: FindGraphviz.cmake
src/toy_optimizer/lib/fmt/: CMakeLists.txt  ChangeLog.rst
src/toy_optimizer/src/: all_headers.hpp
src/toy_optimizer/src/data_flow_analyses/: critical_edges.cpp  (+11 more)
tac_worker/: Function.cpp  Function.h  LoopFinder.cpp  basic_block.cpp  basic_block.h  dag.h  dataflow_graph.cpp  dataflow_graph.hpp  local_value_numbering.h  quadruple.hpp  source.cpp
(+76 files in other folders)
